Fixed the Center Aligning !!

--- a/Project_Wordle/style.css
+++ b/Project_Wordle/style.css
@@ -1,7 +1,11 @@
 * {
     box-sizing: border-box;
 }
-
+.main-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .flex-container{
     display: flex;
     flex-direction: row;
